Fixed Burger menu wrapping issue

--- a/app-next/app/components/header-footer/header/header.module.scss
+++ b/app-next/app/components/header-footer/header/header.module.scss
@@ -4,6 +4,7 @@
   padding: 1rem 3rem;
   color: #ffffff;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
@@ -88,7 +89,7 @@
     }
   }
 
-  @media (min-width: 1024px) {
+  @media (min-width: 1085px) {
     padding: 1rem 15rem;
 
     &__navigation {
